[project]
name = "flow-package"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "liverHawk", email = "hawkyofkn5365@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "gymnasium<1.0",
    "imblearn>=0.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "scikit-learn>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
